--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://db.onlinewebfonts.com/c/a521e23f1e129e5774a897a9c3ce5478?family=Reforma+Grotesk+Medium+W08+Rg" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
